# xconnect

./: .SRCINFO  .gitignore  AGENTS.md  FEATURES.md  PKGBUILD  README.md  gdb-script.in  meson.build  xconnect.conf  xconnect.desktop.in
extra/: install-tree  org.xconnect.service  xconnect.1  xconnect.service  xconnectctl.1
extra/firewalld/: xconnect.xml
gui/: dbus_client.py  xconnect-app.py  xconnect.desktop
pkg/xconnect-app/: .BUILDINFO  .MTREE  .PKGINFO
pkg/xconnect-app-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/crypt/: certificate.vala
src/xconnect/: application.vala  battery-proxy.vala  clipboard.vala  config.vala  connectivity-report-proxy.vala  connectivity-report.vala  core.vala  device-proxy.vala  device.vala  devicechannel.vala  devicemanager-proxy.vala  devicemanager.vala  discovereddevice.vala  discovery.vala  findmyphone-proxy.vala  findmyphone.vala  lockdevice-proxy.vala  lockdevice.vala  main.vala  mousepad-proxy.vala  mousepad.vala  mpris-proxies.vala  mpris.vala  notification-proxy.vala  notification.vala  packet.vala  packethandlerinterface-proxy.vala  packethandlerinterface.vala  packethandlers-proxy.vala  packethandlers.vala  ping-proxy.vala  presenter-proxy.vala  presenter.vala  runcommand.vala  screensaver-inhibit.vala  share-proxy.vala  share.vala  systemvolume-proxy.vala  systemvolume.vala  telephony-proxy.vala  (+7 more)
src/xconnectctl/: battery-iface.vala  device-iface.vala  device-manager-iface.vala  findmyphone-iface.vala  main.vala  share-iface.vala  telephony-iface.vala
test/: mconn-crypt-test.c  mconn-crypt-vala-test.vala
vapi/: gnutls.vapi
